--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "kaboots",
-   "version": "0.1.1",
+   "version": "0.1.2",
    "description": "Kaboot standard library.",
    "dependencies": {
       "astack": "2.0.4",
@@ -8,6 +8,7 @@
       "kaboot": "0.1.0",
       "teishi": "1.0.12"
    },
+   "main": "kaboots.js",
    "author": "Federico Pereiro <fpereiro@gmail.com>",
    "contributors": ["Federico Pereiro <fpereiro@gmail.com>"],
    "license": [{
